# wasm-rust-sandbox

./: .gitignore  README.md
dynamic-dependency-resolution-example/: Cargo.toml
dynamic-dependency-resolution-example/src/: main.rs
first-glitch-art/: Cargo.toml
first-glitch-art/src/: bindings.rs  lib.rs
glitch-art-api/: Cargo.toml  first-glitch-art-api.wasm
glitch-art-api/src/: lib.rs
greet/: Cargo.toml  README.md
greet-user/: Cargo.toml  README.md
greet-user/src/: main.rs
greet/src/: bindings.rs  lib.rs
greet/wit/: hello-world.wit  world.wit
grep-wasm/: Cargo.toml  REACME.md
grep-wasm/src/: main.rs
hello-rust/src/: hello_world.rs  main.rs
hello-wasi-cli/: Cargo.toml  Dockerfile
hello-wasi-cli/src/: main.rs
hello-wasi-http/: Cargo.toml
hello-wasi-http/src/: bindings.rs  lib.rs
hello-world-impl/: Cargo.toml  composed-hello-world-impl.wasm
hello-world-impl/src/: bindings.rs  lib.rs
hello-world-with-spin/: README.md  spin.toml
hello-world-with-spin/echo/: Cargo.toml
hello-world-with-spin/echo/src/: lib.rs
png-glitch-cli/: Cargo.toml  first-glitch.wasm
png-glitch-cli/src/: bindings.rs  main.rs
png-glitch-cli/wit/: glitch-art.wasm  world.wit
