[package]
name = "first-glitch-art"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "axoloto210:first-glitch-art"
target = "axoloto210:glitch-art/png-glitcher@0.1.0"

[package.metadata.component.dependencies]
