[package]
name = "greet"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "axoloto210:greet-impl"

[package.metadata.component.target]
world = "greetable-provider"

[package.metadata.component.dependencies]
