[package]
name = "grep-wasm"
version = "0.1.0"
edition = "2024"

[package.metadata.component]
package = "component:grep-wasm"

[package.metadata.component.dependencies]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
