[package]
name = "hello-wasi-http"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "axoloto210:hello-wasi-http"
target = "wasi:http/proxy@0.2.0"

[package.metadata.component.dependencies]
