[package]
name = "png-glitch-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bitflags = "2.9.0"
clap = { version = "4.5.35", features = ["derive"] }
png-glitch = "0.5.0"
wit-bindgen-rt = "0.41.0"

[package.metadata.component]
target = { world = "axoloto210:glitch-art/png-glitch-cli" }
