[package]
name = "echo"
authors = ["axoloto210 <142103380+axoloto210@users.noreply.github.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
spin-sdk = "3.1.0"

[workspace]
